--- a/nu-react/src/components/PostCard.css
+++ b/nu-react/src/components/PostCard.css
@@ -8,6 +8,7 @@
 
 .postCards div {
 	margin: 10px 0;
+	background-color: rgb(40, 37, 35);
 }
 
 .card {
